# wasm-research

./: .gitignore  Cargo.toml  Components.md  Dev Environment.md  README.md  justfile  rustfmt.toml
crates/component-greeter/: Cargo.toml
crates/component-greeter/src/: lib.rs
crates/component-http-handler/: Cargo.toml
crates/component-http-handler/src/: lib.rs
crates/component-petstore-client/: Cargo.toml
crates/component-petstore-client/src/: lib.rs
crates/component-wasi-fs/: Cargo.toml
crates/component-wasi-fs/src/: lib.rs
rust/: rustfmt.toml
rust/lib/hello-guest/: Cargo.toml  expanded.rs
rust/lib/hello-guest/src/: lib.rs
rust/lib/wasi-ilesystem-guest/: Cargo.toml
rust/lib/wasi-ilesystem-guest/src/: lib.rs
src/: commands.rs
wit/: deps.toml  hello.wit  http-client.wit  petstore.wit  wasi-fs.wit
