[package]
name = "component-wasi-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.16.0" }

[lib]
crate-type = ["cdylib"]
