workspace = { members = ["rust/bin/hello-host"] }
[package]
name = "wasi-filesystem-guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.16.0" }

[lib]
crate-type = ["cdylib"]
